--- a/doc/src/usage.tex
+++ b/doc/src/usage.tex
@@ -7,10 +7,10 @@ This chapter is intended to give the informations necessary for installing and u
 \textbf{Hybrid Fortran} requires the following software components:
 
 \begin{enumerate}
- \item A compiler for either OpenACC Fortran or CUDA Fortran (PGI Accelerator v16.5 recommended).
+ \item A compiler for CUDA Fortran (recommended) or OpenACC Fortran. It is recommended to use PGI Accelerator v16.5.
  \item An x86 Fortran compiler.
  \item Python v2.6.x, Python v2.7.x or compatible.
- \item GNU Make 3.81.
+ \item GNU Make 3.81 or compatible.
  \item GNU gcc or clang (aliased to gcc).
  \item A POSIX compatible operating system.
  \item (optional) \verb|valgrind| is recommended if you would like to use the test system shipped with this framework (accessible through \verb|make tests|).
