better documentation for dependencies, fixed the gathering of symbols to debug print

--- a/doc/src/usage.tex
+++ b/doc/src/usage.tex
@@ -8,8 +8,8 @@ This chapter is intended to give the informations necessary for installing and u
 
 \begin{enumerate}
  \item A compiler for CUDA Fortran (recommended) or OpenACC Fortran. It is recommended to use PGI Accelerator v16.5.
- \item An x86 Fortran compiler.
- \item Python v2.6.x, Python v2.7.x or compatible.
+ \item An x86 Fortran compiler (included in PGI Accelerator).
+ \item Python v2.7.x. (Python v2.6.x is deprecated as of Hybrid Fortran 1.0).
  \item GNU Make 3.81 or compatible.
  \item GNU gcc or clang (aliased to gcc).
  \item A POSIX compatible operating system.
