--- a/doc/src/usage.tex
+++ b/doc/src/usage.tex
@@ -53,7 +53,7 @@ The following files displayed in figure \ref{figure:hybridCUDAComponentsAndInfoF
 \end{description}
 
 \section{Test Interface} \label{sec:testSystem}
-\textbf{Hybrid Fortran} comes with an automated test system that - once set up - is intended to find all errors in your code, each time a build completes. This includes
+\textbf{Hybrid Fortran} comes with an automated test system that - once set up - is intended to find errors in your code as much as possible, each time a build completes. This includes
 \begin{itemize}
  \item Program errors - e.g. use \verb|stop 2| in your code in order to signal Hybrid Fortran that your program has reached a failure condition. This will lead \verb|make tests| to fail.
  \item Initialization errors (symbols / arrays being read without initializing them first), using \verb|valgrind|.
@@ -77,6 +77,9 @@ If you would like to integrate the provided output validation system, please do 
   \item Compress the reference data created by your reference program into \linebreak\verb|./test/your-executable/ref.tar.gz|. See also the description of \verb|runTest.sh| in conjunction with the \verb|validation| command below to understand the correct format.
   \item During development of your hybrid codebase, set the flags \verb|TEST_WITH_EVERY_BUILD| and \verb|DEBUG_MODE| to \verb|true| in the file \verb|MakesettingsGeneral|. This ensures that your tests will run with every build of Hybrid Fortran.
 \end{enumerate}
+
+\subsection{Tracing Computational Errors} \label{sub:debugTracing}
+Hybrid Fortran comes with a debug implementation that you can use to track down computational errors as close as possible to their root cause. To use it, set \verb|OPTION_FLAGS=DEBUG_PRINT| in \verb|MakesettingsGeneral|. By using \verb|make tests_cpu| and \verb|make tests_gpu| the output in \verb|log_last_run.txt| in the \verb|TEST_EXECUTABLES| folders will contain the values of all symbols used in kernels after each kernel has run, at a specific point. This point you define using the \verb|DEBUG_OUT_|-prefixed preprocessor definitions for each domain in the \verb|storage_order.F90| file (i.e. switching to a different point needs a recompilation). For large applications, the recommended workflow is to save \verb|log_last_run.txt| in separate text files (once for the program version that you have already validated as correct, once for the program version that you are trying to debug). Then sanitize these files by replacing whats found by the regular expression pattern \verb|^\s*entering.*|^\s*calling.*|^\s*$|^\s*[0-9]\s*$| with empty strings. This should remove all non-relevant differences between CPU and GPU versions of your program output and only leave the actual computational errors as differences. Then, use a graphical diff program to step through the differences from top to bottom to find the first occurrence of a computational error. Please note that computational inaccuracies are to be expected, depending on the precision you use for your floating point values.
 
 \subsection{Interface} \label{sub:testInterface}
 The following files are part of the sample test interface provided with \textbf{Hybrid Fortran}. They are located in the framework's binary directory. In order to set up the test system correctly, what's relevant for you is the information provided for the files \verb|runTest.sh| and \verb|runTests.sh|. The other files are described here for completeness and in case you'd like to adapt the system for different use cases.
