new ability to have reference data outside of code repository

--- a/doc/src/usage.tex
+++ b/doc/src/usage.tex
@@ -74,7 +74,7 @@ If you would like to integrate the provided output validation system, please do 
     \end{enumerate}
   \item \label{enum:testCompile1} Compile (\verb|make; make install| in project directory) and run your program to make sure the files are being created. Make sure that they actually contain data, for example by checking the file size.
   \item Repeat steps \ref{enum:writeProc}, \ref{enum:testCompile1} in your reference source code in case you go for the .DAT-files option.
-  \item Compress the reference data created by your reference program into \linebreak\verb|./test/your-executable/ref.tar.gz|. See also the description of \verb|runTest.sh| in conjunction with the \verb|validation| command below to understand the correct format.
+  \item Compress the reference data created by your reference program into \linebreak\verb|./test/your-executable/ref.tar.gz| or \linebreak\verb|$HF_REFERENCE_OUTPUT_DIR/your-executable.ref.tar.gz|. See also the description of \verb|runTest.sh| in conjunction with the \verb|validation| command below to understand the correct format.
   \item During development of your hybrid codebase, set the flags \verb|TEST_WITH_EVERY_BUILD| and \verb|DEBUG_MODE| to \verb|true| in the file \verb|MakesettingsGeneral|. This ensures that your tests will run with every build of Hybrid Fortran.
 \end{enumerate}
 
@@ -98,7 +98,7 @@ nx 1 ny 2
 nx 2 ny 3
 \end{lstlisting}. By using different postfixes you can define any number of configuration files that can then be used together with \verb|runTest.sh|. Please note that the following postfixes have a special meaning:
     \begin{description}
-     \item [validation] attempts to extract the reference data from the file \verb|ref.tar.gz| (which is to be located inside the executable's test directory) and runs \verb|allAccuracy.sh| with matching reference directories named using the schema \verb|./ref_[arg_name1][arg_value1]_[...]/|. As an example, if you'd like to use the specification file as shown in lst. \ref{listing:commandLineSpecification}, you will need to provide a file \verb|ref.tar.gz| that contains the following reference data directories: \verb|ref_nx1_ny2| and \verb|ref_nx2_ny3|. Use the command \verb|tar -cvzf ref.tar.gz ref_*| to create this file once you have the reference data ready. In order to create
+     \item [validation] attempts to extract the reference data from the file \verb|ref.tar.gz| (which is to be located inside the executable's test directory) and runs \verb|allAccuracy.sh| with matching reference directories named using the schema \verb|./ref_[arg_name1][arg_value1]_[...]/|. As an example, if you'd like to use the specification file as shown in lst. \ref{listing:commandLineSpecification}, you will need to provide a file \verb|ref.tar.gz| that contains the following reference data directories: \verb|ref_nx1_ny2| and \verb|ref_nx2_ny3|. Use the command \verb|tar -cvzf ref.tar.gz ref_*| to create this file once you have the reference data ready. You may also set and export the environment variable \verb|$HF_REFERENCE_OUTPUT_DIR| and place the compressed reference data in \linebreak\verb|$HF_REFERENCE_OUTPUT_DIR/your-executable.ref.tar.gz| in case the data is too large to put it in the repository together with your code.
      \item [valgrind] calls valgrind tests with these command line specifications. This should only be used for cpu executables that have been compiled using debug flags (\verb|-g|).
     \end{description}
    \item (optional) The output file pattern for your executable. See also the setting \verb|TEST_OUTPUT_FILE_PATTERN| in \verb|config/MakesettingsGeneral|.
